# RAGroot

./: .env.docker.example  .env.example  .env.local.example  .gitignore  DEPLOYMENT_CHECKLIST.md  LICENSE  PERFORMANCE_ANALYSIS.md  README.md  docker-compose.yml  dockerfile  main.py  pyproject.toml  requirements.txt
Documentation/: ARCHITECTURE.md  CLI_GUIDE.md  CONFIGURATION.md  DOCKER_DEPLOYMENT.md  IMAGE_GENERATION.md  LATEX_UTILS.md  OFFLINE_SETUP.md  QUICKSTART.md
static/: index.html
tools/: download_models.py  sample_generator.py  validate_offline.py
utils/: config.py  encoders.py  image_gen.py  indexer.py  latex_utils.py  retriever.py
